# shopimage-api

./: .dockerignore  .env  .env.runtime  .gitignore  API_REMOVE_BG.md  Cargo.toml  Dockerfile  README.md  REDIS_CACHE_README.md  REDIS_SETUP.md  REDIS_TOKEN_FIX.md  REMOVE_BG_CACHE_README.md  deploy-dockerhub.sh  deploy.sh  fly.toml  merge_pdf.py  remove_bg.py  requirements.txt  test_convert_pdf_cache.sh  test_redis.sh  test_redis_cache.sh  test_redis_fast.sh  test_redis_fixed.sh  test_redis_simple.sh  test_remove_bg_cache.sh
src/: azure_blob.rs  convert_batch.rs  image_ops.rs  main.rs  presets.rs  quota.rs  rate_limit.rs  upstash_redis.rs
