[package]
name = "shopimage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Utility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
pdf = "0.9.0"  # สำหรับอ่าน PDF
lopdf = "0.33"  # สำหรับ merge PDF
zip = { version = "0.6", default-features = false, features = ["deflate"] }
# rayon = "1.10"         # <- ถ้าไม่ได้ใช้ parallel processing จริง ให้ลบทิ้งหรือคงคอมเมนต์นี้ไว้

# Env (.env loader)
dotenvy = "0.15"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Azure SDK
azure_core = "0.21"
azure_storage = "0.21"
azure_storage_blobs = "0.21"

# Time & URL
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
webp = "0.3"
dashmap = "5"

# HTTP client for Redis REST API
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
